--- a/Aplikacija/KonacniProjekat/Pages/KvizUradi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizUradi.cshtml
@@ -6,7 +6,7 @@
 
 @if (Model.VecJeRadioKviz != null && Model.VecJeRadioKviz != 0)
 {
-     <div class="alert alert-danger" role="alert" style="text-align: center;">Već ste radili ovaj kviz.</div> 
+     <div class="alert alert-danger" role="alert" style="text-align: center;"> <i class="fas fa-exclamation-triangle"></i> Već ste radili ovaj kviz. <i class="fas fa-exclamation-triangle"></i></div> 
 }
 else
 {
