--- a/Aplikacija/KonacniProjekat/Pages/Prijava.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Prijava.cshtml
@@ -11,7 +11,7 @@
       <input type="password"  placeholder="Lozinka" asp-for="TrenutniKorisnik.Password">
       <input type="submit" value="Prijavi se"/>
       <div class="d-flex justify-content-center links">
-				Nemaš nalog?<a href="/Registracija">Registruj se</a>
+				Nemaš nalog?<a href="/Registracija">Registruj se <i class="far fa-id-badge"></i></a>
 				</div>
     </div>
   </div>
@@ -21,7 +21,7 @@
 {
   <div class="prijava">
    <div class="alert alert-danger" role="alert">
-     Uneli ste pogresno korisnicko ime ili lozinku.
+     <i class="fas fa-exclamation-triangle"></i> Uneli ste pogresno korisnicko ime ili lozinku. <i class="fas fa-exclamation-triangle"></i>
    </div>
  </div>
 }
