--- a/Aplikacija/KonacniProjekat/Pages/RezervacijaOtkazi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/RezervacijaOtkazi.cshtml
@@ -25,5 +25,5 @@
 }
 else
 {
-    <div class="alert alert-danger" role="alert" style="text-align: center;">Nemate pristup ovoj stranici, samo turisti mogu da rezervišu i otkazuju rezervacije.</div>
+    <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i> Nemate pristup ovoj stranici, samo turisti mogu da rezervišu i otkazuju rezervacije. <i class="fas fa-exclamation-triangle"></i></div>
 }
