--- a/Aplikacija/KonacniProjekat/Pages/TuraObrisi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraObrisi.cshtml
@@ -22,10 +22,10 @@
 }
 else
 {
-  <div class="alert alert-danger" role="alert" style="text-align: center;">Ne možete da obrisete turu koja je rezervisana</div> 
+  <div class="alert alert-danger" role="alert" style="text-align: center;"> <i class="fas fa-exclamation-triangle"></i> Ne možete da obrisete turu koja je rezervisana. <i class="fas fa-exclamation-triangle"></i></div> 
 }
 </form>
 }
 else{
-  <div class="alert alert-danger" role="alert" style="text-align: center;">Nemate pristup ovoj stranici, samo admin može da obrise turu</div> 
+  <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i> Nemate pristup ovoj stranici, samo admin može da obriše turu. <i class="fas fa-exclamation-triangle"></i></div> 
 }
