--- a/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
@@ -29,12 +29,12 @@
     </div>
     <div class="flip-card-back-vodic">
       <h2>@vodic.ImeVodica @vodic.PrezimeVodica</h2>
- <a asp-page="./VodicJedan" asp-route-id="@vodic.IdVodica" style="color:#262626; font-size:18px; position: absolute;left: 0; right: 0; bottom:2px">Prikazi detalje <i class='fas fa-id-card-alt' style="color: black;" ></i></a>
-    @if(SessionClass.TipKorisnika=="A")
-    {
-   <div><a asp-page="./VodicObrisi"  asp-route-id="@vodic.IdVodica">Obriši vodiča <i class='fas fa-user-alt-slash'></i></a></div> 
-    <div><a asp-page="./VodicIzmeni" asp-route-id="@vodic.IdVodica">Izmeni nalog vodiču</a></div>
-    }
+      <div><a asp-page="./VodicJedan" asp-route-id="@vodic.IdVodica">Prikazi detalje <i class='fas fa-id-card-alt'></i></a></div>
+      @if(SessionClass.TipKorisnika=="A")
+      {
+        <div><a asp-page="./VodicObrisi"  asp-route-id="@vodic.IdVodica">Obriši nalog vodiču <i class='fas fa-user-alt-slash'></i></a></div> 
+        <div><a asp-page="./VodicIzmeni" asp-route-id="@vodic.IdVodica">Izmeni nalog vodiču <i class="fas fa-user-edit"></i></a></div>
+      }
     </div>
   </div>
  </div>
