--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostIzmeni.cshtml
@@ -34,5 +34,5 @@ ViewData["Title"]="Izmena znamenitosti";
 </form>
 }
  else{
-    <div class="alert alert-danger" role="alert" style="text-align: center;">Nemate pristup ovoj stranici</div> 
+    <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i> Nemate pristup ovoj stranici, samo admin može da izmeni znamenitost. <i class="fas fa-exclamation-triangle"></i></div> 
 }
