--- a/Aplikacija/KonacniProjekat/Pages/Registracija.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Registracija.cshtml
@@ -22,7 +22,7 @@
         <div style="margin: 5px;"><input type="submit" value="Registruj se"/> </div>
 
        	<div class="d-flex justify-content-center links">
-    			<div style="margin: 10px;">Imas nalog? <a href="/Prijava">Prijavi se</a></div>
+    			<div style="margin: 10px;">Imas nalog? <a href="/Prijava">Prijavi se <i class="fas fa-sign-in-alt"></i></a></div>
 				</div>
      </form> 
      </div>
@@ -30,7 +30,7 @@
 
 @if (Model.PostojiVec)
 {
-        <div class="alert alert-danger" role="alert" style="text-align: center;">Korisnik sa tim korisničkim imenom već postoji.</div> 
+        <div class="alert alert-danger" role="alert" style="text-align: center;"> <i class="fas fa-exclamation-triangle"></i> Korisnik sa tim korisničkim imenom već postoji. <i class="fas fa-exclamation-triangle"></i></div> 
 }
 
 
