--- a/Aplikacija/KonacniProjekat/Pages/VodicObrisi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicObrisi.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"]="Brisanje vodiča";
 }
 
+<div>
+ <i class='fas fa-arrow-circle-left'></i><a asp-page="./VodicSvi" style="color:#84c1ff;">Lista vodiča</a>
+</div>
+
 @if(SessionClass.TipKorisnika=="A")
 {
 <form method="post">
@@ -22,10 +26,10 @@
 }
 else
 {
-  <div class="alert alert-danger" role="alert" style="text-align: center;">Ne možete da obrisete vodiča koji ima rezervacije</div> 
+  <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i> Ne možete da obrisete vodiča koji ima rezervacije. <i class="fas fa-exclamation-triangle"></i></div> 
 }
 </form>
 }
 else{
-  <div class="alert alert-danger" role="alert" style="text-align: center;">Nemate pristup ovoj stranici, samo admin može da obrise vodiča</div> 
+  <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i> Nemate pristup ovoj stranici, samo admin može da obrise nalog vodiču. <i class="fas fa-exclamation-triangle"></i></div> 
 }
