--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostObrisi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostObrisi.cshtml
@@ -20,5 +20,5 @@
 </div>
    }
  else{
-    <div class="alert alert-danger" role="alert" style="text-align: center;">Nemate pristup ovoj stranici</div> 
+    <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i> Nemate pristup ovoj stranici, samo admin može da obriše znamenitost. <i class="fas fa-exclamation-triangle"></i></div> 
 }
