--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostSlika.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostSlika.cshtml
@@ -26,5 +26,5 @@ ViewData["Title"]="Izmena znamenitosti";
 </form>
 }
  else{
-    <div class="alert alert-danger" role="alert" style="text-align: center;">Nemate pristup ovoj stranici</div> 
+    <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i> Nemate pristup ovoj stranici, samo admin može da dodaje slike. <i class="fas fa-exclamation-triangle"></i></div> 
 }
