--- a/Aplikacija/KonacniProjekat/Pages/TuraSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraSve.cshtml
@@ -11,7 +11,7 @@ ViewData["Title"]="Ture";
 {
 <nav aria-label="Page navigation">  
     <ul class="pagination justify-content-end">
-        <li class="page-item"><a class="page-link" asp-page="./TuraDodaj">Dodaj turu</a></li>
+        <li class="page-item"><a class="page-link" asp-page="./TuraDodaj">Dodaj turu <i class="far fa-calendar-plus"></i></a></li>
     </ul>
 </nav>
 }
@@ -19,7 +19,7 @@ ViewData["Title"]="Ture";
 {
 <nav aria-label="Page navigation">  
     <ul class="pagination justify-content-end">
-        <li class="page-item"><a class="page-link" asp-page="./TuraDodaj">Kreirajte svoju custom turu</a></li>
+        <li class="page-item"><a class="page-link" asp-page="./TuraDodaj">Kreirajte svoju custom turu <i class="far fa-calendar-plus"></i></a></li>
     </ul>
 </nav>
 }
