--- a/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
@@ -12,7 +12,7 @@
 {
 <nav aria-label="Page navigation">  
     <ul class="pagination justify-content-end">
-        <li class="page-item"><a class="page-link" asp-page="./VodicDodaj">Dodaj vodiča</a></li>
+        <li class="page-item"><a class="page-link" asp-page="./VodicDodaj">Dodaj vodiča <i class='fas fa-user-plus'></i></a></li>
     </ul>
 </nav>
 }
