--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
@@ -13,7 +13,7 @@ ViewData["Title"]="Znamenitosti";
 {
 <nav aria-label="Page navigation">  
     <ul class="pagination justify-content-end">
-        <li class="page-item"><a class="page-link" asp-page="./ZnamenitostDodaj">Dodaj znamenitost</a></li>
+        <li class="page-item"><a class="page-link" asp-page="./ZnamenitostDodaj">Dodaj znamenitost <i class="fas fa-plus-circle"></i></a></li>
     </ul>
 </nav> 
 }
