--- a/Aplikacija/KonacniProjekat/Pages/TuraKomentari.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraKomentari.cshtml
@@ -6,7 +6,7 @@
 <div class=text-center>
     <h1 class="display-4">Komentari za turu: @Model.Tura.NazivTure</h1>
 </div>
-
+<i class='fas fa-arrow-circle-left'></i><a asp-page="./TuraSve" style="color:#84c1ff;">Lista tura</a>
 <nav aria-label="Page navigation">
   <ul class="pagination">
     <li class="page-item"><a class="page-link" asp-page="./TuraSve">Prikazi listu tura</a></li>
