--- a/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
@@ -8,6 +8,7 @@
     <h2 class="display-4">Izmena ture: @Model.OvaTura.NazivTure</h2>
 </div>
 
+<i class='fas fa-arrow-circle-left'></i><a asp-page="./TuraSve" style="color:#84c1ff;">Lista tura</a>
 
 <nav aria-label="Page navigation">
   <ul class="pagination">
