--- a/Aplikacija/KonacniProjekat/Pages/TuraOceni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraOceni.cshtml
@@ -7,6 +7,7 @@
 <div class="text-center">
     <h1 class="=display-4">Anketa za turu: @Model.OvaTura.NazivTure</h1>
 </div>
+ <i class='fas fa-arrow-circle-left'></i><a asp-page="./TuraSve" style="color:#84c1ff;">Lista tura</a>
 <div class="formaKAK">
 <form method="post">
     <ol type="1">
