--- a/Aplikacija/KonacniProjekat/Pages/VodicJedan.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicJedan.cshtml
@@ -12,6 +12,11 @@
   <img src="images/@Model.TrenutniVodic.Slika" style="width:50%;height:45%; display: block; margin-left: auto; margin-right: auto;">
   <h1>@Model.TrenutniVodic.ImeVodica @Model.TrenutniVodic.PrezimeVodica</h1>
    </br>
+   @if(SessionClass.TipKorisnika=="A")
+   {
+     <p class="title"> <i class="fas fa-birthday-cake"></i> Datum rođenja: @Model.TrenutniVodic.DatumRodjenja</p>
+     <p class="title"> <i class="fas fa-male"></i>/<i class="fas fa-female"></i> Pol: @Model.TrenutniVodic.Pol</p>
+   }
   <p class="title"> <img src="https://image.flaticon.com/icons/svg/1/1700.svg" style="width: 20px; height:20px">Licenca: @Model.TrenutniVodic.Licenca</p>
   <p class="title">Ocena: @Model.TrenutniVodic.Ocena <i class="fas fa-hand-holding-heart"></i></p>
   </br>
