--- a/Aplikacija/KonacniProjekat/Pages/KvizDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizDodaj.cshtml
@@ -20,7 +20,7 @@
                                                                     <option value="">Bez ture</option>
                                                                     <option value="" selected disabled hidden>Izaberite za koju turu je vezan kviz.</option>
                                                                 </select>
-            <button type="submit">Dodaj novi kviz</button>
+            <button type="submit" class="dugme">Dodaj novi kviz</button>
         </div>
     </div>
 </form>
