--- a/Aplikacija/KonacniProjekat/Pages/KvizDodajPitanje.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizDodajPitanje.cshtml
@@ -27,7 +27,7 @@
                                                                             <option value="3">C</option>
                                                                             <option value="" selected disabled hidden>Izaberite koji odgovor je tačan.</option>
                                                                         </select>
-           <button type="submit">Dodaj pitanje</button>
+           <button type="submit" class="dugme">Dodaj pitanje</button>
         </div>
     </div>
 </form>
