--- a/Aplikacija/KonacniProjekat/Pages/KvizIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizIzmeni.cshtml
@@ -30,7 +30,7 @@
                                                                     <option value="" selected disabled hidden>Izaberite za koju turu je vezan kviz.</option>
                                                                 </select>
 
-            <button type="submit">Izmeni kviz</button>
+            <button type="submit" class="dugme">Izmeni kviz</button>
         </div>
     </div>
 </form>
