--- a/Aplikacija/KonacniProjekat/Pages/KvizIzmeniPitanje.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizIzmeniPitanje.cshtml
@@ -30,7 +30,7 @@
                                                                                                 <option value="3">C</option>
                                                                                                 
                                                                                             </select>
-            <button type="submit">Izmeni pitanje</button>
+            <button type="submit" class="dugme">Izmeni pitanje</button>
         </div>
     </div>
 </form>
