--- a/Aplikacija/KonacniProjekat/Pages/KvizUradi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizUradi.cshtml
@@ -105,7 +105,7 @@ else
         </div>
 
         <div>
-            <button type="submit" style=" position: relative; margin-left: 45%;">Završi kviz</button>
+            <button type="submit" style=" position: relative; margin-left: 45%;" class="dugme">Završi kviz</button>
         </div>
     }
     
