--- a/Aplikacija/KonacniProjekat/Pages/Prijava.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Prijava.cshtml
@@ -9,7 +9,7 @@
     <div id="formContent">
       <input type="text"  placeholder="Korisnicko ime" asp-for="TrenutniKorisnik.Username">
       <input type="password"  placeholder="Lozinka" asp-for="TrenutniKorisnik.Password">
-      <input type="submit" value="Prijavi se"/>
+      <input type="submit" value="Prijavi se" class="dugme"/>
       <div class="d-flex justify-content-center links">
 				Nemaš nalog?<a href="/Registracija">Registruj se <i class="far fa-id-badge"></i></a>
 				</div>
