--- a/Aplikacija/KonacniProjekat/Pages/TuraDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraDodaj.cshtml
@@ -75,13 +75,13 @@
          
         @if (SessionClass.TipKorisnika == "A")
         {
-          <button type="submit" asp-page-handler="Tura">
+          <button type="submit" asp-page-handler="Tura" class="dugme">
             Dodaj novu turu
           </button>
         }
         else
         {
-          <button type="submit" asp-page-handler="Rezervacija">
+          <button type="submit" asp-page-handler="Rezervacija" class="dugme">
             Kreiraj custom rezervaciju
           </button>
         }
