--- a/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
@@ -58,7 +58,7 @@
                                                   
                                                        
     <div>
-        <button type="submit">Sačuvajte izmene</button>
+        <button type="submit" class="dugme">Sačuvajte izmene</button>
     </div>                                              
     </div>
     </div>                                                
