--- a/Aplikacija/KonacniProjekat/Pages/TuraOceni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraOceni.cshtml
@@ -71,7 +71,7 @@
     </ol>
 
     <div>
-        <button type="submit">Oceni turu</button>
+        <button type="submit" class="dugme">Oceni turu</button>
     </div>
 </form>
 </div>
