--- a/Aplikacija/KonacniProjekat/Pages/VodicIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicIzmeni.cshtml
@@ -28,7 +28,7 @@ ViewData["Title"]="Izmena vodiča";
         <label class="form-control">Licenca:</label> <input asp-for="OvajVodic.Licenca" class="form-control" />
         <label class="form-control">Email:</label> <input asp-for="OvajVodic.Email" class="form-control" />
         <label class="form-control">Profilna slika:</label> <input asp-for="OvajVodic.Slika" class="form-control" />
-        <button type="submit">Sacuvaj izmene</button>
+        <button type="submit" class="dugme">Sačuvaj izmene</button>
         </div>
     </div>
 </form>
