--- a/Aplikacija/KonacniProjekat/Pages/VodicOceni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicOceni.cshtml
@@ -36,7 +36,7 @@
         }
         }
         </select>
-      <button type="submit" class="btn btn-primary">Oceni</button>
+      <button type="submit" class="dugme">Oceni</button>
   }
   else{
     <label style="color:red"><i class="fas fa-exclamation-triangle"></i> Ne mozete da ocenite vodica s kojim niste bili na turi! <i class="fas fa-exclamation-triangle"></i></label>
