--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostDodaj.cshtml
@@ -27,7 +27,7 @@ ViewData["Title"]="Nova znamenitost";
         <label class="form-control">Tip:</label> <input asp-for="NovaZnamenitost.Tip" class="form-control" placeholder="Tip" />
         <label class="form-control">Dodajte sliku:</label> <input type="file" asp-for="NovaZnamenitost.Slika"  placeholder="Slika" required />
        
-        <button type="submit">Dodaj novu znamenitost</button>
+        <button type="submit" class="dugme">Dodaj novu znamenitost</button>
         </div>
     </div>
 </form>
