--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
@@ -23,7 +23,7 @@ ViewData["Title"]="Znamenitosti";
 <select class="js-example-basic-single js-states form-control select-fit-text" asp-for="IzabraniTip" asp-items="Model.SviTipovi" >
   <option >Prikaži sve</option>
 </select>
-<button type="submit">Prikaži</button>
+<button type="submit" class="dugme">Prikaži</button>
 </div>
 
 <div class="row">
