--- a/Aplikacija/KonacniProjekat/Pages/Odjava.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Odjava.cshtml
@@ -7,7 +7,7 @@
 <form method="post">
   <div class="prijava fadeInDown">
       <label>Da li ste sigurni da zelite da se odjavite?</label>
-      <button type="submit">Odjavi se</button>
+      <button type="submit" class="dugme">Odjavi se</button>
     </div>
   </div>
 </form>
