--- a/Aplikacija/KonacniProjekat/Pages/Registracija.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Registracija.cshtml
@@ -19,10 +19,10 @@
         <input type="text" asp-for="NoviTurista.Email" placeholder="Email" required />
         <input type="text" asp-for="NoviKorisnik.Username" placeholder="Korisničko ime" required />
         <input type="text"  asp-for="NoviKorisnik.Password" placeholder="Lozinka" required />
-        <div style="margin: 5px;"><input type="submit" value="Registruj se"/> </div>
+        <div style="margin: 8px;"><input type="submit" value="Registruj se" class="dugme"/> </div>
 
        	<div class="d-flex justify-content-center links">
-    			<div style="margin: 10px;">Imas nalog? <a href="/Prijava">Prijavi se <i class="fas fa-sign-in-alt"></i></a></div>
+    			<div>Imaš nalog? <a href="/Prijava">Prijavi se <i class="fas fa-sign-in-alt"></i></a></div>
 				</div>
      </form> 
      </div>
