--- a/Aplikacija/KonacniProjekat/Pages/TuraRezervisi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraRezervisi.cshtml
@@ -36,7 +36,7 @@
         
 
                 <div>
-                    <button type="submit">Rezerviši turu</button>
+                    <button type="submit" class="dugme">Rezerviši turu</button>
                 </div>
     
             </form>
