--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostSlika.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostSlika.cshtml
@@ -20,7 +20,7 @@ ViewData["Title"]="Izmena znamenitosti";
     <div class="prijava">
         <div id="formContent">
          <label class="form-control">Dodajte sliku:</label> <input type="file" asp-for="NovaSlika.Slika"  placeholder="Slika" required />
-         <button type="submit">Dodaj Sliku</button>
+         <button type="submit" class="dugme">Dodaj Sliku</button>
         </div>
     </div>
 </form>
